# sports-window

./: .gitignore  .prettierignore  ARCHITECTURE.md  LICENSE  README.md  build-windows.bat  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: audit-glossary.ts  verify-parsers.ts
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DetailOverlay.css  DetailOverlay.tsx  HeadToHeadStrip.css  HeadToHeadStrip.tsx  Hoverable.tsx  Icons.tsx  NextGameWidget.css  NextGameWidget.tsx  Pennant.css  Pennant.tsx  PlayerDetailPanel.css  PlayerDetailPanel.tsx  RuleBookOverlay.css  RuleBookOverlay.tsx  SeasonDrilldownPanel.css  SeasonDrilldownPanel.tsx  SegmentedControl.css  SegmentedControl.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.css  Sidebar.tsx  TeamSelector.css  TeamSelector.tsx  TitleBar.css  TitleBar.tsx  Toggle.css  Toggle.tsx  WpaScenes.tsx
src/data/: cache.ts  demoData.ts  detailCache.ts  espnApi.ts  gameSummaryParsers.ts  glossary.de.ts  glossary.ts  headToHead.ts  historyData.ts  http.ts  parsers.test.ts  parsers.ts  playerStatsParsers.ts  playoffData.ts  rateLimit.ts  ruleBook.de.ts  ruleBook.ts  safe.test.ts  safe.ts  settings.ts  teamConfig.ts  venueData.ts
src/hooks/: useDetailOverlay.tsx  useHeadToHead.ts  usePlayerStats.ts  usePullToRefresh.ts
src/lib/: diagnostics.ts  format.test.ts  format.ts  sidebarBackgrounds.ts  teamTheme.ts  theme.ts  updateCheck.ts  useAutostart.ts  useInView.ts  useNow.ts  useScrollSpy.ts
src/locales/: de.json  en.json
src/state/: DataProvider.tsx  SettingsProvider.tsx  ThemeProvider.tsx
src/styles/: app-shell.css  base.css  components.css  mobile.css  tokens.css
src/types/: domain.ts
src/views/: FormationCard.css  FormationCard.tsx  GameDetailPanel.css  Roster.css  (+22 more)
(+2 files in other folders)
