[package]
name = "sports-window"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sports_window_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Size-optimized release build. The shipped binary is the bulk of the app
# bundle, so optimize it for size rather than the cargo default (opt-level 3,
# no LTO, symbols kept). Trims the binary substantially with no behavior change.
[profile.release]
opt-level = "s"   # optimize for size
lto = true        # link-time optimization across crates
codegen-units = 1 # better optimization at the cost of build time
panic = "abort"   # drop unwinding tables (Tauri's recommended size setting)
strip = true      # remove debug symbols

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2.5.9", features = ["gzip", "brotli", "deflate"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-os = "2"

# Desktop-only plugins (no mobile implementation / desktop-only use — see lib.rs):
# - autostart: launch-at-login (Phase 1)
# - updater/process/dialog: cross-device update sync (Phase 4). The updater has no
#   mobile implementation; process + dialog are only used for the desktop update flow.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"

